test/zinc_source/compile_errors/metadata/02_type_wrong_arity.zn
// expected-error: type\(\) expects exactly one argument

fn main() {
    print(type().name)
}
